welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:8: error: not found: value recule_a_la_case_départ
  recule_a_la_case_départ();
  ^