welcome.lessons.welcome.methods.basics.Methods.scala.code

def goAndGet() {
  while(!estSurBiscuit){
	avance();
   } 	
  prendBiscuit();
  recule_a_la_case_départ();
  poseBiscuit();
 }
    